# thesis

./: .gitignore  Makefile  PROJECTEN.md  README.md  VRAGEN.md  opmerkingen  vragen.md
.github/workflows/: latex.yml
.latex-common/: preamble.tex  titlepage.tex
code/: .env  docker-compose.yml  test-coverage.json
code/analyser/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  create-run  main.cpp  test-results
code/analyser/cmake/: FindJson.cmake
code/analyser/src/: create-run.cpp  parse-coverage.cpp  test-results.cpp  web.cpp
code/analyser/src/coverage/: buffer.cpp  buffer.h  manager.cpp  manager.h
code/analyser/src/database/: connection.cpp  connection.h  prepared_stmt.cpp  prepared_stmt.h
code/analyser/src/repositories/: manager.cpp  manager.h
code/analyser/src/runs/: manager.cpp  manager.h  run.h
code/analyser/src/tests/: manager.cpp  manager.h  test.h  test_result.h
code/analyser/src/util/: logging.h
code/analyser/src/web/: response.cpp  response.h  server.cpp  server.h
code/analyser/src/web/handlers/: get_run.cpp  get_run.h  post_coverage.cpp  post_coverage.h  post_runs.h  post_test_results.cpp  post_test_results.h
code/database/: .gitignore  Dockerfile  create-database.sh  create.sql  schema.sql
code/junit/: .editorconfig  .gitignore  README.md  build.gradle  settings.gradle
code/junit/example/: README.md  build.gradle  run.sh  settings.gradle
code/predictor/: .dockerignore  .editorconfig  Dockerfile  README.md  docker-entrypoint-cli.sh  docker-entrypoint-daemon.sh  docker-entrypoint.sh  main.py
code/predictor/src/: cli.py  daemon.py  main.py
code/web/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  ROUTES.md
code/web/cmake/: FindMongoose.cmake
code/web/lib/mongoose/: mongoose.h
code/web/src/: create-run.cpp  evaluate.cpp  get-order.cpp  server.cpp  test-coverage.cpp  test-results.cpp
code/web/src/coverage/: buffer.cpp  buffer.h  manager.cpp  manager.h
code/web/src/database/: connection.cpp  connection.h
code/web/src/predictions/: manager.cpp  manager.h  meta_predictor.cpp  meta_predictor.h  prediction.cpp  prediction.h
code/web/src/repositories/: manager.cpp  manager.h
code/web/src/runs/: manager.cpp  manager.h  run.h
code/web/src/server/: response.h  server.cpp  server.h
code/web/src/server/handlers/: get_run.cpp  get_run.h  post_coverage.cpp  post_coverage.h  post_runs.cpp  post_runs.h  post_test_results.cpp  post_test_results.h
code/web/src/tests/: manager.cpp  manager.h  test.h  test_result.h
code/web/src/util/: logging.cpp  logging.h
evaluation/dodona/: README.MD  analyse-durations-failures.py  cancel-all-workflows.py  download-results.py  failing_commits.json  failing_tests.json  instrument-parent-runs.py  parse-failed-tests.py  parse-test-durations.py  performance-updated.csv  performance.csv  rate_performance.py  rate_performance_original_duration.py  restart-failed-workflows.py  scrape-failing-commits.py  spark-analyse-coverage-results.py  spark-analyse-results-failures.py  spark-analyse-results.py  test-durations.json
evaluation/dodona/instrumenter/: Dockerfile  build.sh  instrumenter.sh  runner.sh
evaluation/mockito/: failed-tests.csv  failed-tests.json  parse-failed-tests.py
evaluation/sel2/: cancel-all-workflows.py  download-results.py  failing_commits.json  failing_commits.txt  instrument-parent-runs.py  instrument-runs.py  keep-only-java.py  performance.csv  rate_performance.py  scrape-failing-commits.py  spark-find-coverage.py  spark-find-durations.py  spark-find-failed-tests.py
evaluation/sel2/instrumenter/: build.sh  instrumenter.sh  runner.sh  workflow.yml
evaluation/sel2/parent-instrumenter/: Dockerfile  build.sh  instrumenter.sh  runner.sh  workflow.yml
evaluation/travis-logs/: mapreduce-consecutive-tests.py  mapreduce-durations.py  mapreduce-failed-tests.py  parse-csv.py  parse-travis-statuses.py  travis-statuses.txt
literature/: bronnen.md  power.md  techniques.md
literature/containersoftware/: containers.md
meetings/: 01-10-2019.md  12-04-2020.md  15-10-2019.md  20-03-2020.md
paper/: .gitignore  Makefile  TODO.md  abbreviations.tex  acknowledgements.tex  acknowledgments.tex  admission.tex  alpha.MD  appendices.tex  bibliography.tex  concepten.md  conclusion.tex  evaluation.tex  glossary.tex  introduction.tex  list-of-figures.tex  list-of-listings.tex  list-of-tables.tex  other-ways.tex  references.bib  related-work.tex  software-engineering.tex  thesis.ist  thesis.tex  thesis.txt  velocity.tex  wordcount.sh
paper/abstract-en/: Makefile  algorithms.tex  conclusion.tex  extended-abstract.tex  framework.tex  introduction.tex  phdsymp-en.cls  results.tex  techniques.tex
paper/abstract-en/assets/: ci.tikz  tcp.tikz  tcs.tikz  tsm.tikz
paper/abstract-nl/: algorithms.tex  conclusion.tex  extended-abstract.tex  framework.tex  introduction.tex  phdsymp-nl.cls  results.tex  techniques.tex
paper/abstract-nl/assets/: ci.tikz  tcp.tikz  tcs.tikz  tsm.tikz
paper/assets/charts/: .Rhistory  agile-success-rate.r  avg-test-duration (copy).r  avg-test-duration.r  rq1-failure-probability.R  rq1-failure-probability.r  rq2-consecutive-failure.R  rq2-test-run-durations.R  (+12 more)
paper/diagrams/: sequence-diagram.txt
paper/evaluation/: data-collection.tex  research-questions.tex  results.tex  test-subjects.tex
paper/related-work/: adoption.tex  algorithms.tex  approaches.tex  existing-implementations.tex  tcp.tex  tcs.tex  tsm.tex
paper/software-engineering/: agile-software-development.tex  continuous-integration.tex  sdlc.tex  tsa.tex
paper/summary/: dutch.tex  english.tex  lay.tex  vulgarising.tex
paper/velocity/: alpha.tex  analysis.tex  design-goals.tex  high-level-overview.tex  pipeline.tex
presentations/: Makefile  extract-notes.py  present.sh  styles.css
presentations/2019-12-16/: .notes-settings.yaml  notes.md  presentation.md
presentations/2020-06-19/: TOBIAH.md  charts  out.html  presentation.md  presentation.pdfpc
proposal/: thesis-proposal.md
reports/: 2019-11-02-progress.tex  2020-02-16-progress.tex  Makefile
(+126 files in other folders)
